--- a/src/views/secretary.pug
+++ b/src/views/secretary.pug
@@ -12,6 +12,8 @@ append dashboard
         a(href="./achievements") Achievement list
       li  
         a(href="./employees") Employee list
+      li  
+        a(href="./issue-token") Issue token
 
   h2 Secretary Dashboard
   block content
