--- a/src/views/admin/list.pug
+++ b/src/views/admin/list.pug
@@ -12,5 +12,4 @@ append content
                 tr
                     each val, key in item 
                         unless key == "id" 
-                            td 
-                                a(href="./" + type + "/" + item.id) #{val}
+                            td #{val}
